# LearnOpenGL

./: .gitignore  .gitmodules  CMakeLists.txt  NOTES  README.md  compile_commands.json  makefile
cmake/: FindASSIMP.cmake  FindGLFW3.cmake  FindGLM.cmake
shaders/: debug_fs.glsl  debug_gs.glsl  debug_vs.glsl  fs.glsl  light_fs.glsl  shader_single_color_fs.glsl  vs.glsl
src/: camera.cc  camera.cpp  camera.h  camera_test.cpp  cloth.cpp  hand_mesh.cc  hand_mesh.cpp  hand_mesh.h  light.cpp  light.h  main.cc  main.cpp  mesh.cc  mesh.h  misc.cc  misc.cpp  misc.h  model.cc  model.cpp  model.h  object.cc  object.h  point.cpp  shader.h  time.cc  time.cpp  time.h
